tests/error/modifier_errors/higher_order_flag_mismatch1.err
Error: Missing protocol implementation (at $FILE:15:15)
   | 
13 | @guppy
14 | def test(q: qubit) -> None:
15 |     apply_ctrl(dagger_only, q)
   |                ^^^^^^^^^^^ Type `def dagger_only(q: qubit) -> None` does not implement
   |                            protocol `Controllable[[qubit], None]`

Note: Function `dagger_only` is only declared as `daggerable=True`

Guppy compilation failed due to 1 previous error
